trying to fix mobile overflow + z index

--- a/common.css
+++ b/common.css
@@ -58,7 +58,6 @@ h1 {
     color: var(--maincolor);
     padding-block: calc(var(--spacing)*4);
     padding-inline: var(--spacing);
-    /* z-index: 10; */
     position: relative;
 
     @media (width > 600px) {
@@ -178,7 +177,8 @@ nav ol {
 /* from class how to translate down */
 .sticky li:hover {
     @media (width > 950px) {
-        transform: translateY(20px);}
+        transform: translateY(20px);
+    }
 }
 
 nav ol li, summary {
